@@ -1,3 +1,15 @@
+2001-11-28  James Henstridge  <james@daa.com.au>
+
+	* generate/generate.py (FunctionDefsParser.define_func): special
+	case GdkAtom return values from functions.
+
+	* gtkmodule.c (_wrap__disable_gdk_threading): add function for
+	disabling GDK threading.
+	(init_gtk): remove the environment variable check, in favour of
+	the more convenient _disable_gdk_threading() function.
+
+	* configure.in: update configure.in for 2.52.
+
 2001-10-10  Johan Dahlin  <zilch.am@home.se>
 
 	Patch from Christian Reis <kiko@async.com.br>
